Fix extra vertical overflow for app-container in Firefox
Squashed commit of the following:

commit 37a1e3d48d7fdcf2c043064da50de7164a489ecc
Author: Mario Pabon <me@mariopabon.com>
Date:   Wed Jul 12 11:06:13 2017 -0400

    Fix extra vertical overflow for app-container in Firefox

Fix extra vertical overflow for app-container in Firefox

--- a/styles/pup/layout/_app-container.scss
+++ b/styles/pup/layout/_app-container.scss
@@ -3,14 +3,19 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  left: 0;
   overflow-y: hidden;
-  width: 100vw;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: layer(base);
 
   // Don't make header fixed for smaller screens
   @include media-query('medium-and-down') {
     display: block;
     height: auto;
+    position: relative;
     width: 100%;
   }
 }
